--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <body>
     <header>
-        <img class="logo" src="../images/deezer-logo-8-2048x392.png" alt="">
+        <img class="logo" src="./images/deezer-logo-8-2048x392.png" alt="">
         <div class="input-container">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input id="band" type="text" placeholder="e.g. abba">
