updated the host secret key

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 method: 'GET',
                 headers: {
                     'X-RapidAPI-Key': API_KEY,
-                    'X-RapidAPI-Host': 'deezerdevs-deezer.p.rapidapi.com'
+                    'X-RapidAPI-Host': HOST
                 }
             };
 
