renamed the key names to match those in netlify

--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
             const options = {
                 method: 'GET',
                 headers: {
-                    'X-RapidAPI-Key': 'aa5eb0538fmshdf5108ad9fcd0b1p1160ffjsn7be0e06c7f05',
-                    'X-RapidAPI-Host': 'deezerdevs-deezer.p.rapidapi.com'
+                    'API_KEY': 'aa5eb0538fmshdf5108ad9fcd0b1p1160ffjsn7be0e06c7f05',
+                    'HOST': 'deezerdevs-deezer.p.rapidapi.com'
                 }
             };
 
